change  matToolbar  position  $

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -1,6 +1,13 @@
 
 
-<h1>
 
-      Hello world 
-</h1>
+<main>
+      <header>
+            <div class="text-main">
+                  <p> <span class="text-main-title">Cantinière </span> <br> Commandez vos repas <span
+                          class="text-main-important">rapidement</span> et en toute <span class="text-main-important">sécurité </span>
+                  </p>
+            </div>
+      </header>
+
+</main>
