--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -8,7 +8,7 @@
         </mat-icon>
     </button>
     <div class="logo-container"  > <!-- logo  Il  faut  changer  la police de Alter  -->
-        <div [ngClass]= "{'paddingForLogoWhenConnectedUser' : isconnected}"  class="img-logo" > <img src="../assets/logo.png" alt="cantière-logo"> </div>
+        <div  [ngClass]= "{'paddingForLogoWhenConnectedUser' : isconnected}"  class="img-logo" > <img src="../assets/logo.png" alt="cantière-logo"> </div>
         <div class="sqli"> Cantière <br> By SQLI  </div>
         <div  class="connect">  <button class="btn"> <mat-icon>login</mat-icon>    Connection</button>  </div>
     </div>
@@ -16,7 +16,7 @@
     <div *ngIf="!isconnected" class="not-connect-login-small">   <mat-icon >login</mat-icon>    </div>
 </mat-toolbar>
 <mat-sidenav-container>
-    <mat-sidenav #sidenav="matSidenav" mode="side">
+    <mat-sidenav  #sidenav="matSidenav" mode="side">
 
         <img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/200x200" />
 
@@ -63,7 +63,7 @@
 
     </mat-sidenav>
     <mat-sidenav-content>
-        <div [ngClass]= "{'border-for-user' : isconnected}"  class=" container mat-elevation-z4">    <!-- content  -->
+        <div   class="container">    <!-- content  -->
             <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
