--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -1,64 +1,76 @@
-
 <mat-toolbar>
-    <button *ngIf="isconnected" class="burgger" mat-icon-button (click)="sidenav.toggle()">
+    <button (click)="sidenav.toggle()" *ngIf="isconnected" class="burgger" mat-icon-button>
         <div *ngIf="!sidenav.opened">
-            <img src="../../assets/logo.png" alt="cantière-logo">
+            <img alt="cantière-logo" src="../../assets/logo.png">
         </div>
         <div *ngIf="sidenav.opened">
-            <img  src="../../assets/logo.png" alt="cantière-logo">
+            <img alt="cantière-logo" src="../../assets/logo.png">
         </div>
     </button>
     <div *ngIf="!isconnected">
-        <img src="../../assets/logo.png" alt="cantière-logo">
+        <img alt="cantière-logo" src="../../assets/logo.png">
 
     </div>
 
-    <div class="logo-container"  ><div class="sqli-div"> <span class="cantière-span">Cantière</span> <br> <div class="bysqli"><span class="by">By</span>  <span class="sqli">SQLI </span></div> </div></div>
-    <div  class="connect">  <button class="btn"> <mat-icon>login</mat-icon>    Connection</button>  </div>
-    <div *ngIf="isconnected" class="not-connect-login-small">   <mat-icon >logout</mat-icon>    </div>
-    <div *ngIf="!isconnected" class="not-connect-login-small">   <mat-icon >login</mat-icon>    </div>
+    <div class="logo-container">
+        <div class="sqli-div"><span class="cantière-span">Cantière</span> <br>
+            <div class="bysqli"><span class="by">By</span> <span class="sqli">SQLI </span></div>
+        </div>
+    </div>
+    <div class="connect">
+        <button class="btn">
+            <mat-icon>login</mat-icon>
+            Connection
+        </button>
+    </div>
+    <div *ngIf="isconnected" class="not-connect-login-small">
+        <mat-icon>logout</mat-icon>
+    </div>
+    <div *ngIf="!isconnected" class="not-connect-login-small">
+        <mat-icon>login</mat-icon>
+    </div>
 </mat-toolbar>
 <mat-sidenav-container>
     <mat-sidenav #sidenav="matSidenav">
 
-        <img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/200x200" />
+        <img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/200x200"/>
 
         <h4 class="name">John Smith</h4>
-        <p class="designation"> Aston Student  😇  </p>
+        <p class="designation"> Aston Student 😇 </p>
 
         <mat-divider></mat-divider>
 
-        <button mat-button class="menu-button">
+        <button class="menu-button" mat-button>
             <mat-icon>home</mat-icon>
             <span>Home</span>
         </button>
-        <button mat-button class="menu-button">
+        <button class="menu-button" mat-button>
             <mat-icon>person</mat-icon>
             <span>Profile</span>
         </button>
 
-        <button mat-button class="menu-button" >
+        <button class="menu-button" mat-button>
             <mat-icon>shopping_cart</mat-icon>
-            <span >Mon Panier </span>
-            <mat-icon  matBadge="10" matBadgePosition="above after" matBadgeColor="warn" class="badge"></mat-icon>
+            <span>Mon Panier </span>
+            <mat-icon class="badge" matBadge="10" matBadgeColor="warn" matBadgePosition="above after"></mat-icon>
 
         </button>
 
 
         <mat-divider></mat-divider>
 
-        <button mat-button class="menu-button">
+        <button class="menu-button" mat-button>
             <mat-icon> restaurant_menu</mat-icon>
             <span>Menus</span>
         </button>
-        <button mat-button class="menu-button">
+        <button class="menu-button" mat-button>
             <mat-icon>lunch_dining</mat-icon>
             <span>Plats</span>
         </button>
 
         <mat-divider></mat-divider>
 
-        <button mat-button class="menu-button">
+        <button class="menu-button" mat-button>
 
             <mat-icon>logout</mat-icon>
             <span>Deconnexion</span>
@@ -67,7 +79,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <div class=" container mat-elevation-z4">    <!-- content  -->
-             <router-outlet></router-outlet>
+            <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
