add angular material  to  project

--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -1,3 +1,5 @@
+
+
 <mat-toolbar>
     <button (click)="sidenav.toggle()" *ngIf="isconnected" class="burgger" mat-icon-button>
         <div *ngIf="!sidenav.opened">
@@ -79,8 +81,11 @@
     </mat-sidenav>
     <mat-sidenav-content  >
         <main>    <!-- content  -->
+
+
             <router-outlet></router-outlet>     <!--  main  container  -->
         </main>
+        <div class="btn"> Hello  </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
 
