make  background to home page

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -1,13 +1,7 @@
 
+<header>
+      <div class="container-images">
 
+      </div>
 
-<main>
-      <header>
-            <div class="text-main">
-                  <p> <span class="text-main-title">Cantinière </span> <br> Commandez vos repas <span
-                          class="text-main-important">rapidement</span> et en toute <span class="text-main-important">sécurité </span>
-                  </p>
-            </div>
-      </header>
-
-</main>
+</header>
