new html body  for  home page

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -1,7 +1,17 @@
 
 <header>
       <div class="container-images">
+            <h1>Cantinière</h1>
 
+            <mat-divider></mat-divider>
+            <h3> Commandez vos repas  rapidement et en toute sécurité   </h3>
       </div>
 
 </header>
+
+<section id="presentation">
+         <div id="text-intro">
+                <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas sains et équilibrés à la cantine Aston</h2>
+               <p></p>
+         </div>
+</section>
