--- a/Frontend/Cantine/src/assets/styles/home.component.scss
+++ b/Frontend/Cantine/src/assets/styles/home.component.scss
@@ -5,5 +5,22 @@ header{
        height: 70vh;
        background-image: url("../images/books.jpg");
    }
+  mat-divider {
+    background-color: black;
+  }
 
 }
+
+
+/*
+"Savourez notre cuisine saine et équilibrée - découvrez les menus hebdomadaires de la cantine Aston !"
+"Des plats délicieux pour nourrir les esprits et les corps - explorez les spécialités de la cantine scolaire Aston"
+"Manger sainement n'a jamais été aussi facile - notre carte de la cantine Aston offre des options pour tous les goûts et besoins diététiques"
+"Des choix alimentaires qui font la différence - les repas végétariens, sans gluten et sans allergènes de la cantine scolaire Aston"
+"Le goût sucré de l'enfance - découvrez nos desserts de la semaine et friandises saines pour la cantine Aston"
+"Pas de ventre vide ici - nos snacks et collations sains pour une énergie durable tout au long de la journée à la cantine Aston"
+"Boissons pour les têtes intelligentes et les corps en forme - explorez notre sélection de boissons saines pour la cantine scolaire Aston"
+"Le meilleur de la région - notre cantine Aston propose des produits locaux et bio pour des repas frais et savoureux"
+"Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas sains et équilibrés à la cantine Aston"
+"La cantine Aston - un endroit où les aliments sains et les sourires heureux vont de pair".
+*/
