make new header background

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -1,17 +1,25 @@
-
 <header>
       <div class="container-images">
             <h1>Cantinière</h1>
 
             <mat-divider></mat-divider>
-            <h3> Commandez vos repas  rapidement et en toute sécurité   </h3>
+            <h3> Commandez vos repas rapidement et en toute sécurité </h3>
       </div>
 
 </header>
 
 <section id="presentation">
-         <div id="text-intro">
-                <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas sains et équilibrés à la cantine Aston</h2>
-               <p></p>
-         </div>
+      <div id="text-intro">
+            <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
+                  sains et équilibrés à la cantine Aston</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit blanditiis quidem praesentium officia
+                  facilis quibusdam doloremque nobis veniam exercitationem incidunt, temporibus ad pariatur quam dolorem
+                  illo vero facere? Ut voluptatibus ea unde adipisci assumenda sint quis? Aperiam minus error est!</p>
+      </div>
+      <div id="prestation">
+             <div class="imagesprestation">
+                  <h4> Nos  Menus </h4>
+                   <img src="../../../assets/images/menu.jpg" alt="Nos  menus "  > 
+             </div>
+      </div>
 </section>
