make design of home section

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -9,9 +9,40 @@
 </header>
 
 <section>
-        
+            <div id="text-intro">
+                  <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
+                        sains et équilibrés à la cantine Aston</h2>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit blanditiis quidem praesentium officia
+                        facilis quibusdam doloremque nobis veniam exercitationem incidunt, temporibus ad pariatur quam dolorem
+                        illo vero facere? Ut voluptatibus ea unde adipisci assumenda sint quis? Aperiam minus error est!</p>
+            </div>
+   
+              <div id="prestation">
+                  <div class="images-prestation">
+                        <h4> Nos  Menus </h4>
+                        <a href=""> <img src="../../../assets/images/menu.jpg" alt="Nos  menus "> </a>
+                   </div>
+              </div>
+              <div>
+                  <div class="images-prestation">
+                        <h4> Nos  Plats </h4>
+                        <a href=""> <img src="../../../assets/images/meal.jpg" alt="Nos  plats  " > </a>
+                   </div>
+                 
+              </div>
+              <div>
+                  <div class="images-prestation">
+                        <h4> Nos Boisson </h4>
+                        <a href=""> <img src="../../../assets/images/boisson.jpg" alt="Nos  boisson " > </a>
+                   </div>
+                  
+              
+            </div>
+    
+     
+      <!-- 
  <div class="container-fluid">
-  
+  <div class="row">
             <div id="text-intro">
                   <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
                         sains et équilibrés à la cantine Aston</h2>
@@ -33,8 +64,29 @@
                         <a href=""> <img src="../../../assets/images/boisson.jpg" alt="Nos  boisson " > </a>
                    </div>
             </div>
-   
+      </div>
  </div>
-                 
+
+
+
+
+
+
+
+
+  <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                One of three columns
+              </div>
+              <div class="col-sm">
+                One of three columns
+              </div>
+              <div class="col-sm">
+                One of three columns
+              </div>
+            </div>
+          </div>
+-->     
         
 </section>
