change main section  home style

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -1,14 +1,60 @@
 <header>
-      <div class="container-images">
-            <h1>Cantinière</h1>
-
-            <mat-divider></mat-divider>
-            <h3> Commandez vos repas rapidement et en toute sécurité </h3>
-      </div>
+    <div class="container-images">
+        <h1>Cantinière</h1>
+        <p>https://www.youtube.com/watch?v=t5zFfDdvApE&ab_channel=HaverikaKrishna</p>
+        <mat-divider></mat-divider>
+        <h3> Commandez vos repas rapidement et en toute sécurité </h3>
+    </div>
 
 </header>
 
+
+<div class="container-fluid">
+        <div class="container">
+              <div class="row">
+
+              </div>
+        </div>
+</div>
+
+<!--
 <section>
+    <div class="container-fluid">
+        <div id="text-intro">
+            <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
+                sains et équilibrés à la cantine Aston</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit blanditiis quidem praesentium officia
+                facilis quibusdam doloremque nobis veniam exercitationem incidunt, temporibus ad pariatur quam dolorem
+                illo vero facere? Ut voluptatibus ea unde adipisci assumenda sint quis? Aperiam minus error est!</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4"  id="prestation">
+                    <div class="images-prestation">
+                        <h4> Nos Menus </h4>
+                        <a href=""> <img alt="Nos  menus " src="../../../assets/images/menu.jpg"> </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="col-md-4"  class="images-prestation">
+                        <h4> Nos Plats </h4>
+                        <a href=""> <img alt="Nos  plats  " src="../../../assets/images/meal.jpg"> </a>
+                    </div>
+                </div>
+                <div>
+                    <div class="col-md-4" class="images-prestation">
+                        <h4> Nos Boisson </h4>
+                        <a href=""> <img alt="Nos  boisson " src="../../../assets/images/boisson.jpg"> </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+-->
+
+<!--<section>
             <div id="text-intro">
                   <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
                         sains et équilibrés à la cantine Aston</h2>
@@ -38,9 +84,8 @@
                   
               
             </div>
-    
      
-      <!-- 
+
  <div class="container-fluid">
   <div class="row">
             <div id="text-intro">
@@ -88,5 +133,3 @@
             </div>
           </div>
 -->     
-        
-</section>
