--- a/Frontend/Cantine/src/assets/styles/home.component.scss
+++ b/Frontend/Cantine/src/assets/styles/home.component.scss
@@ -49,8 +49,8 @@ section{
   }
 
  #prestation{
-    display: flex;
-    flex-wrap: rap;
+   // display: flex;
+   // flex-wrap: rap;
  }
   
   img{
