--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -12,7 +12,9 @@
 <div class="container-fluid">
         <div class="container">
               <div class="row">
-
+                    <article class="col-md-12">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, beatae? Rerum, nesciunt. Quasi quibusdam voluptas perspiciatis obcaecati. Voluptate ipsum, qui, voluptatem sunt officia expedita voluptatum mollitia quas praesentium eligendi itaque commodi dignissimos, aliquid quo repellat culpa sed animi voluptatibus eius. Ducimus totam amet id quidem placeat qui cum tempora at animi eius, dolorum voluptatibus dolor ad fuga fugiat molestias reiciendis molestiae minus aut corporis facere esse illo similique! Dolore ea quidem iure assumenda, expedita harum aliquid vel officiis perferendis explicabo.
+                    </article>
               </div>
         </div>
 </div>
