make  a  grid with  boostrap  in  home section

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -8,18 +8,18 @@
 
 </header>
 
-
+<!--
 <div class="container-fluid">
         <div class="container">
               <div class="row">
-                    <article class="col-md-12">
+                    <div class="col-md-1">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, beatae? Rerum, nesciunt. Quasi quibusdam voluptas perspiciatis obcaecati. Voluptate ipsum, qui, voluptatem sunt officia expedita voluptatum mollitia quas praesentium eligendi itaque commodi dignissimos, aliquid quo repellat culpa sed animi voluptatibus eius. Ducimus totam amet id quidem placeat qui cum tempora at animi eius, dolorum voluptatibus dolor ad fuga fugiat molestias reiciendis molestiae minus aut corporis facere esse illo similique! Dolore ea quidem iure assumenda, expedita harum aliquid vel officiis perferendis explicabo.
-                    </article>
+                    </div>
               </div>
         </div>
 </div>
+-->
 
-<!--
 <section>
     <div class="container-fluid">
         <div id="text-intro">
@@ -31,29 +31,31 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4"  id="prestation">
+                <div class="col-md-4">
                     <div class="images-prestation">
                         <h4> Nos Menus </h4>
                         <a href=""> <img alt="Nos  menus " src="../../../assets/images/menu.jpg"> </a>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="images-prestation">
+                        <h4> Nos  Plats </h4>
+                        <a href=""> <img src="../../../assets/images/meal.jpg" alt="Nos  plats  " > </a>
+                    </div>
+                </div>
 
-                <div>
-                    <div class="col-md-4"  class="images-prestation">
-                        <h4> Nos Plats </h4>
-                        <a href=""> <img alt="Nos  plats  " src="../../../assets/images/meal.jpg"> </a>
-                    </div>
-                </div>
-                <div>
-                    <div class="col-md-4" class="images-prestation">
+                <div class="col-md-4">
+                    <div class="images-prestation">
                         <h4> Nos Boisson </h4>
-                        <a href=""> <img alt="Nos  boisson " src="../../../assets/images/boisson.jpg"> </a>
+                        <a href=""> <img src="../../../assets/images/boisson.jpg" alt="Nos  boisson " > </a>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
 </section>
+<!--
 -->
 
 <!--<section>
