--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -29,22 +29,22 @@
                 facilis quibusdam doloremque nobis veniam exercitationem incidunt, temporibus ad pariatur quam dolorem
                 illo vero facere? Ut voluptatibus ea unde adipisci assumenda sint quis? Aperiam minus error est!</p>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
+
+            <div class="row center ">
+                <div class="col-md-4 col-sm-12 ">
                     <div class="images-prestation">
                         <h4> Nos Menus </h4>
                         <a href=""> <img alt="Nos  menus " src="../../../assets/images/menu.jpg"> </a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class=" col-md-4  col-sm-12 ">
                     <div class="images-prestation">
                         <h4> Nos  Plats </h4>
                         <a href=""> <img src="../../../assets/images/meal.jpg" alt="Nos  plats  " > </a>
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="images-prestation">
                         <h4> Nos Boisson </h4>
                         <a href=""> <img src="../../../assets/images/boisson.jpg" alt="Nos  boisson " > </a>
@@ -53,7 +53,6 @@
 
             </div>
         </div>
-    </div>
 </section>
 <!--
 -->
