--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -8,22 +8,52 @@
 
 </header>
 
-<!--
-<div class="container-fluid">
-        <div class="container">
-              <div class="row">
-                    <div class="col-md-1">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, beatae? Rerum, nesciunt. Quasi quibusdam voluptas perspiciatis obcaecati. Voluptate ipsum, qui, voluptatem sunt officia expedita voluptatum mollitia quas praesentium eligendi itaque commodi dignissimos, aliquid quo repellat culpa sed animi voluptatibus eius. Ducimus totam amet id quidem placeat qui cum tempora at animi eius, dolorum voluptatibus dolor ad fuga fugiat molestias reiciendis molestiae minus aut corporis facere esse illo similique! Dolore ea quidem iure assumenda, expedita harum aliquid vel officiis perferendis explicabo.
-                    </div>
-              </div>
-        </div>
-</div>
--->
 
+<section>
+    <div class="container-fluid presentation">
+        <div id="text-intro">
+            <h2 class="center">Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires
+                pour des repas
+                sains et équilibrés à la cantine Aston</h2>
+            <p>
+                Commandez vos repas composés de plats équilibrés et sains ainsi que des menus variés pour
+                toute la semaine à la cantine Aston. Profitez de nos menus à partir de 5,50€ et de nos plats
+                à partir de 3,50€. Nos plats sont préparés avec des produits frais et de qualité, et livrés dans
+                les plus brefs délais. Vous pouvez donc profiter d'un repas savoureux et sain sans tracas ni attente.
+            </p>
+        </div>
+
+        <div class="row center ">
+            <div class="col-md-4 col-sm-12 ">
+                <div class="images-prestation">
+                    <h4> Nos Menus </h4>
+                    <a href=""> <img alt="Nos  menus " src="../../../assets/images/menu.jpg"> </a>
+                </div>
+            </div>
+            <div class=" col-md-4  col-sm-12 ">
+                <div class="images-prestation">
+                    <h4> Nos Plats </h4>
+                    <a href=""> <img alt="Nos  plats  " src="../../../assets/images/meal.jpg"> </a>
+                </div>
+            </div>
+
+
+            <div class="col-md-4 col-sm-12">
+                <div class="images-prestation">
+                    <h4> Nos Boisson </h4>
+                    <a href=""> <img alt="Nos  boisson " src="../../../assets/images/boisson.jpg"> </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</section>
+<!--
 <section>
     <div class="container-fluid">
         <div id="text-intro">
-            <h2>Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
+            <h2 class="center">Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas
                 sains et équilibrés à la cantine Aston</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit blanditiis quidem praesentium officia
                 facilis quibusdam doloremque nobis veniam exercitationem incidunt, temporibus ad pariatur quam dolorem
@@ -54,6 +84,9 @@
             </div>
         </div>
 </section>
+-->
+
+
 <!--
 -->
 
@@ -118,7 +151,9 @@
 
 
 
-
+Commandez  vos   repas  composé de plats equilibrés et sains  et des menus variés  pour  toute la semaine  à la cantine Aston
+profitez de nos menus  à  partir de  5.50€  et  nos  plats  à  partir de  3.50€
+les  plats  sont  livrés  dans  dans  les plus brefs délais  et  sont  préparés  avec  des  produits frais  et  de  qualité
 
 
 
