--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -10,20 +10,15 @@
 
 
 <section>
-    <div class="container-fluid presentation">
+    <div class="container-fluid ">
         <div id="text-intro">
             <h2 class="center">Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires
                 pour des repas
                 sains et équilibrés à la cantine Aston</h2>
-            <p>
-                Commandez vos repas composés de plats équilibrés et sains ainsi que des menus variés pour
-                toute la semaine à la cantine Aston. Profitez de nos menus à partir de 5,50€ et de nos plats
-                à partir de 3,50€. Nos plats sont préparés avec des produits frais et de qualité, et livrés dans
-                les plus brefs délais. Vous pouvez donc profiter d'un repas savoureux et sain sans tracas ni attente.
-            </p>
+
         </div>
 
-        <div class="row center ">
+        <div class="row center">
             <div class="col-md-4 col-sm-12 ">
                 <div class="images-prestation">
                     <h4> Nos Menus </h4>
@@ -46,6 +41,18 @@
             </div>
 
         </div>
+    </div>
+
+
+
+    <div>
+        <p>
+            Commandez vos repas composés de plats équilibrés et sains ainsi que des menus variés pour
+            toute la semaine à la cantine Aston. Profitez de nos menus à partir de 5,50€ et de nos plats
+            à partir de 3,50€. Nos plats sont préparés avec des produits frais et de qualité, et livrés dans
+            les plus brefs délais. Vous pouvez donc profiter d'un repas savoureux et sain sans tracas ni attente.
+        </p>
+
     </div>
 
 </section>
