--- a/Frontend/Cantine/src/assets/styles/home.component.scss
+++ b/Frontend/Cantine/src/assets/styles/home.component.scss
@@ -1,84 +1,99 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@800&family=Dancing+Script:wght@600&display=swap');
-header{
+
+header {
   font-family: 'Advent Pro', sans-serif;
+  width: 100%;
+
+  .container-images {
     width: 100%;
-   .container-images {
-       width: 100%;
-       height: 70vh;
-       background: url("../images/mainImage.jpg") ;
-        background: url("../images/mainimage3.jpg") ;
-        background: url("../images/books.jpg");
-        background-size : 100% 100%;      
-       animation: mainImageAnimation 15s ease-in 0s infinite  alternate forwards ;
-       h1{
-        font-family: 'Dancing Script', cursive;
-        color: rgb(255, 253, 250);
-        font-size: 6em; 
-        text-align: center;
-        padding-top: 20vh;
-        text-shadow: 1px 3px 15px black;
-      }
-      mat-divider { // le séparateur
-        background-color: rgb(255, 253, 250);
-        height: 2px;
-        width: 10vw;
-        margin: -3px auto;
-        margin-top: 5vh;
-        box-shadow: 1px 3px 15px black;
-      }
-      h3{
-         text-align: center;
-         color: rgb(255, 253, 250);
-         font-size: 2em;
-         margin-top: 5vh;
-         text-shadow: 1px 3px 15px black;
-      }
-   }
+    height: 70vh;
+    background: url("../images/mainImage.jpg");
+    background: url("../images/mainimage3.jpg");
+    background: url("../images/books.jpg");
+    background-size: 100% 100%;
+    animation: mainImageAnimation 15s ease-in 0s infinite alternate forwards;
+
+    h1 {
+      font-family: 'Dancing Script', cursive;
+      color: rgb(255, 253, 250);
+      font-size: 6em;
+      text-align: center;
+      padding-top: 20vh;
+      text-shadow: 1px 3px 15px black;
+    }
+
+    mat-divider { // le séparateur
+      background-color: rgb(255, 253, 250);
+      height: 2px;
+      width: 10vw;
+      margin: -3px auto;
+      margin-top: 5vh;
+      box-shadow: 1px 3px 15px black;
+    }
+
+    h3 {
+      text-align: center;
+      color: rgb(255, 253, 250);
+      font-size: 2em;
+      margin-top: 5vh;
+      text-shadow: 1px 3px 15px black;
+    }
+  }
 
 }
 
 
-section{
+section {
   font-family: 'Advent Pro', sans-serif;
-  background-color: #ded6c1;
+  background-color: rgba(223, 215, 193, 0.53);
   padding: 50px 0 50px 0;
-  #text-intro{
+
+  #text-intro {
     padding: 0px 20%;
   }
 
- #prestation{
-   // display: flex;
-   // flex-wrap: rap;
- }
-  
-  img{
-        width:40%;
-        height: 30vh;
+  .row {
+    margin-top: 4%;
+  }
+
+
+  p {
+    margin-top: 50px;
+  }
+
+  .images-prestation {
+    h4 {
+      font-family: 'Dancing Script', cursive;
+      font-size: 1.8em;
+      margin: 15px;
+      font-weight: 500;
     }
-  p, h2, h4,.row{
+
+    img {
+      width: 42%;
+      height: 40vh;
+      border-radius: 20px;
+      box-shadow: 5px 5px 3px 1px rgba(0, 0, 0, 0.7);
+    }
+  }
+
+  p, h2, h4, .row {
     margin-bottom: 0px;
   }
 }
 
 
-
-
 @media (max-width: 768px) {
-     section {
-          img{
-            width:80%;
-            height: 50vh;
-          }
-     }
+  section {
+    img {
+      width: 80%;
+      height: 50vh;
+    }
+  }
 }
 
 
-
 //      background-color: #FFFAE1;
-
-
-
-
 
 
 /*@keyframes mainImageAnimation  {
@@ -104,10 +119,6 @@ section{
 }*/
 
 
-
-
-
-
 /*
 "Savourez notre cuisine saine et équilibrée - découvrez les menus hebdomadaires de la cantine Aston !"
 "Des plats délicieux pour nourrir les esprits et les corps - explorez les spécialités de la cantine scolaire Aston"
@@ -120,8 +131,6 @@ section{
 "Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires pour des repas sains et équilibrés à la cantine Aston"
 "La cantine Aston - un endroit où les aliments sains et les sourires heureux vont de pair".
 */
-
-
 
 
 /*
