--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -15,43 +15,43 @@
             <h2 class="center">Rechargez vos batteries avec des aliments nutritifs - découvrez nos menus hebdomadaires
                 pour des repas
                 sains et équilibrés à la cantine Aston</h2>
+        </div>
+        <div class="container red">
+            <div class="row center">
+                <div class="col-md-4 col-sm-3 ">
+                    <div class="images-prestation">
+                        <h4> Nos Menus </h4>
+                        <a href=""> <img alt="Nos  menus " src="../../../assets/images/menu.jpg"> </a>
+                    </div>
+                </div>
+                <div class=" col-md-4  col-sm-12 ">
+                    <div class="images-prestation">
+                        <h4> Nos Plats </h4>
+                        <a href=""> <img alt="Nos  plats  " src="../../../assets/images/meal.jpg"> </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="images-prestation">
+                        <h4> Nos Boisson </h4>
+                        <a href=""> <img alt="Nos  boisson " src="../../../assets/images/boisson.jpg"> </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
 
         </div>
 
-        <div class="row center">
-            <div class="col-md-4 col-sm-12 ">
-                <div class="images-prestation">
-                    <h4> Nos Menus </h4>
-                    <a href=""> <img alt="Nos  menus " src="../../../assets/images/menu.jpg"> </a>
-                </div>
-            </div>
-            <div class=" col-md-4  col-sm-12 ">
-                <div class="images-prestation">
-                    <h4> Nos Plats </h4>
-                    <a href=""> <img alt="Nos  plats  " src="../../../assets/images/meal.jpg"> </a>
-                </div>
-            </div>
+
+        <!--        <p>-->
+        <!--        Commandez vos repas composés de plats équilibrés et sains ainsi que des menus variés pour-->
+        <!--        <div class="container">-->
 
 
-            <div class="col-md-4 col-sm-12">
-                <div class="images-prestation">
-                    <h4> Nos Boisson </h4>
-                    <a href=""> <img alt="Nos  boisson " src="../../../assets/images/boisson.jpg"> </a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-
-    <div>
-        <p>
-            Commandez vos repas composés de plats équilibrés et sains ainsi que des menus variés pour
-            toute la semaine à la cantine Aston. Profitez de nos menus à partir de 5,50€ et de nos plats
-            à partir de 3,50€. Nos plats sont préparés avec des produits frais et de qualité, et livrés dans
-            les plus brefs délais. Vous pouvez donc profiter d'un repas savoureux et sain sans tracas ni attente.
-        </p>
+        <!--        toute la semaine à la cantine Aston. Profitez de nos menus à partir de 5,50€ et de nos plats-->
+        <!--            à partir de 3,50€. Nos plats sont préparés avec des produits frais et de qualité, et livrés dans-->
+        <!--            les plus brefs délais. Vous pouvez donc profiter d'un repas savoureux et sain sans tracas ni attente.-->
+        <!--        </p>-->
 
     </div>
 
